# loadsmith-oracle-plugins

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  ROADMAP.md  index.json
.agents/: AGENTS.md  README.md
.github/workflows/: e2e.yml  release.yml
ci/: release.py
connector/: Cargo.toml
connector/src/: conn.rs  destination.rs  lib.rs  source.rs  types.rs
connector/tests/: live.rs
docs/: README.md
image/: Dockerfile  README.md
lab/: README.md  loadsmith-lab.toml
lab/cases/oracle-to-jsonl/: case.yaml  pipeline.yaml
lab/cases/oracle-to-jsonl-incremental/: case.yaml  pipeline.yaml
lab/cases/oracle-to-jsonl-tls/: case.yaml  pipeline.yaml
lab/cases/oracle-to-jsonl-tls/wallet/: cwallet.sso  generate.sh
lab/cases/oracle-to-oracle/: case.yaml  pipeline.yaml
lab/cases/oracle-to-oracle-lob/: case.yaml  pipeline.yaml
lab/cases/oracle-to-oracle-nls/: case.yaml  pipeline.yaml
lab/cases/oracle-to-oracle-staged-merge/: case.yaml  pipeline.yaml
