[package]
name    = "loadsmith-oracle"
version = "0.1.0"
edition = "2021"
license.workspace = true

# A "connector" package: one crate, a shared lib (conn/types), and two separate
# binaries (source + destination) — mirrors the canonical `postgres`/`mysql`
# layout. The difference is the driver: this one links Oracle's native client
# (ODPI-C / Instant Client), so it lives out of canon.
[package.metadata.loadsmith]
name     = "oracle"
summary  = "Oracle source and destination (native ODPI-C / Instant Client)"
protocol = "^1"
provides = [
    { kind = "source",      bin = "loadsmith-source-oracle" },
    { kind = "destination", bin = "loadsmith-destination-oracle" },
]

[lib]
name = "loadsmith_oracle"

[[bin]]
name = "loadsmith-source-oracle"
path = "src/bin/source.rs"

[[bin]]
name = "loadsmith-destination-oracle"
path = "src/bin/destination.rs"

[dependencies]
tokio                = { workspace = true }
anyhow               = { workspace = true }
tracing              = { workspace = true }
serde                = { workspace = true }
serde_json           = { workspace = true }
async-trait          = { workspace = true }
arrow                = { workspace = true }
arrow-array          = { workspace = true }
arrow-schema         = { workspace = true }
chrono               = { workspace = true }
oracle               = { workspace = true }
loadsmith-plugin-sdk = { workspace = true }
loadsmith-arrow      = { workspace = true }
